fix layout bugs on mob devices

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -22,10 +22,18 @@
     .uk-card-body
         padding: 10px
     #header .uk-logo
-            width: 100px
-            margin-left: 5px
+        width: 100px
+        margin-left: 5px
     #root .uk-overlay p
         font-size: 1rem
+    #buy-modal
+        .uk-modal-title
+            font-size: 1.2rem
+        .uk-modal-footer
+            text-align: center
+            padding: 15px 0
+        .uk-button
+            padding: 0 10px
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
