--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -47,8 +47,13 @@ body
 	overflow-x: hidden
 	opacity: 1
 
+.text-primary
+    color: #009FE3
+
 #header
     background-color: #009FE3
+    a
+        color: rgba(255,255,255,.8)
     .uk-logo
         background: url(../img/logo2.png) no-repeat center
         background-size: contain
@@ -94,4 +99,7 @@ footer
     background-color: #f0506e
     .uk-iconnav li:first-child
         padding-left: 0
+#buy-modal .uk-modal-footer
+    text-align: right
+
 @import "media" // Всегда в конце
